# tmignore

./: .envrc  .gitignore  AGENTS.md  CONFIGURATION.md  Cargo.toml  GUIDELINES.md  README.md  deny.toml  flake.nix  opencode.json
nix/: cargo.nix  darwin-module-checks.nix  darwin-module.nix  darwin.nix
nix/darwin/: module-checks.nix  module.nix
src/: cli.rs  config.rs  global.rs  lib.rs  main.rs  report.rs  rule.rs  run.rs  scan.rs
src/backend/: mod.rs  tmutil.rs
tests/: cli.rs
