[package]
name = "tmignore"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
camino = { version = "1", features = ["serde1"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
